--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,11 +1,11 @@
 .footer {
-    background-color: #f2f2f2; /* Light gray background */
-    padding: 20px;
+    /* background-color: #f2f2f2;  */
+    /* padding: 20px; */
     text-align: center;
     display: flex;
     flex-direction: column;
     align-items: center; /* Center content horizontally */
-    width: 100%; /* Ensure full width */
+    width: 100%; 
     position: fixed;
     bottom: 0;
     left: 0;
