--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,12 +1,12 @@
 .footer {
-    /* background-color: #f2f2f2;  */
-    /* padding: 20px; */
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center; /* Center content horizontally */
-    width: 100%; 
-    position: fixed;
-    bottom: 0;
-    left: 0;
-  }
+  /* background-color: #f2f2f2;  */
+  /* padding: 20px; */
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%; 
+  position: fixed;
+  bottom: 0;
+  left: 0;
+} 
