--- a/src/screens/JobScreen.css
+++ b/src/screens/JobScreen.css
@@ -38,3 +38,24 @@
 .apply-button:hover {
   background-color: #005580;
 }
+.map {
+  position: relative;
+  overflow: hidden;
+  border: 1px solid #e3e3e3;
+  border-radius: 8px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  margin-top: 20px;
+  height: 300px; 
+}
+
+.map-container {
+  height: 100%;
+  width: 100%;
+  border-radius: 8px;
+}
+
+.leaflet-container {
+  height: 400px;
+  width: 100%;
+  border-radius: 8px;
+}
